--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Mono&display=swap');
 
-*{
-    margin: 0;padding: 0;
+* {
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }
 
@@ -40,92 +41,132 @@
     --primaryColor: #a1887f;
 }
 
-body{
+body {
     font-family: 'Roboto', sans-serif;
-    background-color:var(--bgColor);
+    background-color: var(--bgColor);
     color: var(--textPrimary);
     font-size: 1.4rem;
+    padding: 0;
+    box-sizing: border-box;
 }
-/* main{
-    
-    width: 600px;
-    margin: 50px auto;
-} */
-h1{
+
+/* new feature  */
+
+.word {
+    transition: color 0.3s ease;
+}
+
+.word.typed {
+    color: var(--textPrimary); /* White in the default theme */
+}
+
+.word.current {
+    color: var(--primaryColor); /* Blue in the default theme */
+}
+
+.word.upcoming {
+    color: var(--textSecondary); /* Gray in the default theme */
+}
+
+
+.wrapper {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+main {
+    flex: 1;
+}
+
+h1 {
     color: var(--primaryColor);
 }
-h1 svg{
-    width: 40px;
-    fill: var(--primaryColor);
-}
-#header{
+
+#header {
     display: grid;
     grid-template-columns: 1fr 1fr;
     margin: 20px 6px 30px;
 }
-#buttons{
+
+#buttons {
     text-align: right;
 }
-#info{
+
+#info {
     color: var(--primaryColor);
 }
-button{
-    background: rgba(255,255,255,.2);
-    border:0;
-    color: rgba(255,255,255,.5);
+
+button {
+    background: rgba(255, 255, 255, .2);
+    border: 0;
+    color: rgba(255, 255, 255, .5);
     padding: 5px 20px;
     border-radius: 5px;
     cursor: pointer;
 }
-div#game{
-    line-height:35px;
-    height:105px;
+
+div#game {
+    line-height: 35px;
+    height: 105px;
     overflow: hidden;
     position: relative;
 }
-div#game:focus{
-    outline:0;
+
+div#game:focus {
+    outline: 0;
 }
-#words{
+
+#words {
     filter: blur(5px);
     color: var(--textSecondary);
 }
-#game:focus #words{
+
+#game:focus #words {
     filter: blur(0);
 }
+
 #focus-error {
     position: absolute;
     inset: 0;
     text-align: center;
     padding-top: 35px;
 }
-#game:focus #focus-error{
-    display:none;
+
+#game:focus #focus-error {
+    display: none;
 }
-div.word{
+
+div.word {
     display: inline-block;
     font-family: 'Roboto Mono', monospace;
     margin: 0 5px;
 }
-.letter.correct{
+
+.letter.correct {
     color: #fff;
 }
-.letter.incorrect{
+
+.letter.incorrect {
     color: #f55;
 }
-@keyframes blink{
-    0%{
+
+@keyframes blink {
+    0% {
         opacity: 1;
     }
-    50%{
+
+    50% {
         opacity: 0;
     }
-    100%{
+
+    100% {
         opacity: 1;
     }
 }
-#cursor{
-    display:none;
+
+#cursor {
+    display: none;
     width: 2px;
     height: 1.6rem;
     background: var(--primaryColor);
@@ -134,19 +175,24 @@ div.word{
     left: 18px;
     animation: blink .3s infinite;
 }
-#game:focus #cursor{
+
+#game:focus #cursor {
     display: block;
 }
-#game.over #words{
+
+#game.over #words {
     opacity: .5;
     filter: blur(0px);
 }
-#game.over:focus #cursor{
-    display:none;
+
+#game.over:focus #cursor {
+    display: none;
 }
+
 #game.over #focus-error {
     display: none;
 }
+
 #theme-selector {
     margin: 20px;
     text-align: center;
@@ -174,135 +220,18 @@ div.word{
     background: rgba(205, 85, 85, 0.3);
 }
 
-
-
-:root, .theme-blue, .theme-green, .theme-red, .theme-brown {
+:root,
+.theme-blue,
+.theme-green,
+.theme-red,
+.theme-brown {
     transition: background-color 0.3s, color 0.3s;
 }
 
-
-/* footer start  */
-
+/* Footer */
 footer {
-    position: relative;
     text-align: center;
-    line-height: 1rem;
-    font-size: .75rem;
-    color: var(--sub-alt-color);
-    margin: -.5em
+    padding: 1em 0;
+    background-color: var(--bgColor);
+    color: var(--textPrimary);
 }
-
-footer .keyTips {
-    transition: .125s;
-    margin-bottom: 2em;
-    line-height: 2
-}
-
-footer .keyTips key {
-    margin: 0 .25rem
-}
-
-footer #commandLineMobileButton {
-    display: none;
-    top: -4rem;
-    left: 0;
-    position: absolute;
-    font-size: 1rem;
-    width: 3rem;
-    height: 3rem;
-    text-align: center;
-    line-height: 3rem;
-    background: var(--main-color);
-    border-radius: 99rem;
-    z-index: 99;
-    cursor: pointer;
-    color: var(--background-color);
-    transition: .25s
-}
-
-footer .leftright {
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    user-select: none;
-    display: grid;
-    grid-template-columns: auto auto
-}
-
-footer .leftright .textButton {
-    text-decoration: none;
-    font-size: .75rem;
-    line-height: 1rem;
-    padding: .25em .5em
-}
-
-footer .leftright .left {
-    text-align: left;
-    display: grid;
-    grid-auto-flow: column;
-    width: -moz-fit-content;
-    width: fit-content
-}
-
-footer .leftright .right {
-    text-align: right;
-    display: grid;
-    grid-auto-flow: column;
-    width: -moz-fit-content;
-    width: fit-content;
-    justify-self: right
-}
-
-footer .leftright .left .textButton,
-footer .leftright .right .textButton {
-    display: grid;
-    grid-auto-flow: column;
-    gap: .25rem;
-    align-items: baseline;
-    width: -moz-available;
-    width: -moz-max-content;
-    width: max-content
-}
-
-footer .leftright .left .textButton:hover,
-footer .leftright .right .textButton:hover {
-    color: var(--text-color);
-}
-
-footer .currentVersion {
-    display: flex
-}
-
-footer .currentVersion #newVersionIndicator {
-    margin: 0;
-    font-size: unset;
-    background-color: var(--main-color);
-    border-radius: calc(var(--roundness)/2);
-    color: var(--background-color);
-    text-align: center;
-    cursor: pointer;
-    transition: .125s
-}
-
-footer.focus .keyTips {
-    opacity: 0 !important
-}
-
-footer.focus .textButton {
-    opacity: 0 !important
-}
-
-footer.focus #newVersionIndicator {
-    opacity: 0 !important
-}
-
-footer.focus #commandLineMobileButton {
-    opacity: 0 !important;
-    pointer-events: none !important
-}
-
-footer a{
-    background-color: transparent;
-    text-decoration: none;
-    color: var(--sub-alt-color);
-}
-/* footer end */
